added channel name

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -109,6 +109,12 @@
     <footer>
         Readings are recorded at one-hour intervals.
         <br>
+        <br>
+        Based on the observed trend in the graph, where the battery temperature shows a consistent increase over time, it is indicative of the phone being in use or undergoing charging. 
+    Despite this, it's notable that the local temperature, remains relatively stable throughout the observed period.
+     After careful analysis, the estimated average room temperature is found to be approximately 33.125°C
+    <br> This determination is significant as it provides insight into the environmental conditions surrounding the battery's operation.
+     Understanding the ambient temperature is crucial for optimizing the performance and longevity of the battery, particularly in electronic devices like phones where temperature regulation is vital for efficient operation.
         <p style=" text-align: center;">So, Room temperature is 33&#8451;</p>
     </footer>
 </body>
